--- a/pig-oa/pig-oa-biz/pom.xml
+++ b/pig-oa/pig-oa-biz/pom.xml
@@ -94,7 +94,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>com.pig4cloud</groupId>
+			<artifactId>pig-oa-api</artifactId>
+			<version>3.9.2</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
 
     <profiles>
         <profile>
