--- a/pig-oa/pig-oa-biz/pom.xml
+++ b/pig-oa/pig-oa-biz/pom.xml
@@ -100,7 +100,13 @@
 			<version>3.9.2</version>
 			<scope>compile</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.pig4cloud</groupId>
+            <artifactId>pig-upms-biz</artifactId>
+            <version>3.9.2</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <profiles>
         <profile>
