feat(gateway): 排除数据源自动配置并添加 MySQL 驱动支持
- 在网关应用中排除 DataSourceAutoConfiguration 配置
- 为 pig-auth 模块添加 MySQL 驱动依赖
- 引入 MyBatis Plus Starter 以支持数据库操作
- 确保 Spring Boot 3.x 兼容性

--- a/pig-auth/pom.xml
+++ b/pig-auth/pom.xml
@@ -83,6 +83,20 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-crypto</artifactId>
         </dependency>
+
+
+		<!-- 新增：MySQL 驱动（必需，Spring Boot 3.x 兼容） -->
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<version>9.2.0</version>
+		</dependency>
+
+		<!-- 如果有 MyBatis，确保已引入（从 common-core 传递） -->
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+		</dependency>
     </dependencies>
 
     <profiles>
