feat(tracing): 引入 Brave 链路追踪支持
- 移除 spring-cloud-starter-sleuth 依赖
- 添加 micrometer-tracing-bridge-brave依赖用于链路追踪
- 配置 zipkin-reporter-brave 以支持追踪数据上报- 在应用配置中增加 trace ID 和 span ID 的日志格式化模式
- 升级相关依赖版本以兼容新的追踪实现

--- a/pig-upms/pig-upms-biz/src/main/resources/application.yml
+++ b/pig-upms/pig-upms-biz/src/main/resources/application.yml
@@ -17,5 +17,8 @@ spring:
     import:
       - nacos:application-@profiles.active@.yml
       - nacos:${spring.application.name}-@profiles.active@.yml
+logging:
+  pattern:
+    level: "[${spring.application.name:},%X{spanId:-}] %5p"
 
 
