feat(log): 增强请求日志过滤器以支持spanId
- 在请求日志中添加spanId信息
- 更新应用启动类以扫描日志组件包, 增加扫描common-log包
- 配置日志输出格式以高亮显示应用名和spanId- 启用ANSI颜色输出以改善日志可读性

--- a/pig-upms/pig-upms-biz/src/main/resources/application.yml
+++ b/pig-upms/pig-upms-biz/src/main/resources/application.yml
@@ -17,8 +17,11 @@ spring:
     import:
       - nacos:application-@profiles.active@.yml
       - nacos:${spring.application.name}-@profiles.active@.yml
+  output:
+    ansi:
+      enabled: ALWAYS
 logging:
   pattern:
-    level: "[${spring.application.name:},%X{spanId:-}] %5p"
+    level: "%clr([${spring.application.name:},%X{spanId:-}]){yellow} %clr(%5p){highlight}"
 
 
